[PATCH] Fixed whitespace

--- a/client/app/sass/meeting-details.scss
+++ b/client/app/sass/meeting-details.scss
@@ -2,59 +2,7 @@
 @import "components/form-button";
 @import "participant";
 
-.private-dash-header {
-    display: flex;
-    justify-content: space-between;
-    margin: 30px 2.5vw;
-    align-items: center;
-
-    .title {
-        position: relative;
-
-        i {
-            padding: 8px;
-            position: absolute;
-            left: -40px;
-            top: 3px;
-        }
-    }
-
-    .equal-box {
-        flex-grow: 1;
-    }
-
-    .branding {
-        text-align: left;
-
-        .branding-logo {
-            img {
-                width: 200px;
-            }
-        }
-    }
-
-    h1 {
-        font-size: $font-size-large;
-        position: relative;
-        padding-bottom: 5px;
-
-        &:after {
-            content: "";
-            position: absolute;
-            width: 50%;
-            height: 2px;
-            bottom: 0;
-            left: 25%;
-            border-bottom: 2px solid #232323;
-        }
-    }
-
-
-
-}
-
 @media (min-width: 550px){
-
   .participant-row:nth-child(odd) {
     margin-left: 0;
   }
